--- a/addons/zylann.hterrain/plugin.cfg
+++ b/addons/zylann.hterrain/plugin.cfg
@@ -3,5 +3,5 @@
 name="Heightmap Terrain"
 description="Heightmap-based terrain"
 author="Marc Gilleron"
-version="1.2.1 dev"
+version="1.2.1"
 script="tools/plugin.gd"
